Fix the font size in the  media query for better responsive on mobile screens

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -104,5 +104,6 @@ select {
 
   .quizAnswer {
     width: 300px;
+    font-size: medium;
   }
 }
